Prøver gammelt oppsett for Dockerfile.